# pydantype

./: README.md  pyproject.toml
pydantype/: __init__.py  base.py  decorators.py  models.py  types.py
