[tool.poetry]
name = "pydantype"
version = "0.1.0"
description = "Custom validated types, integratable with pydantic "
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.1"
humanize = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
